--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,8 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  background-color: #fff !important;
+  overflow-x: hidden;
 }
 
 .container {
