--- a/css/style.sass
+++ b/css/style.sass
@@ -17,6 +17,8 @@ body
     color: #001049
     display: flex
     flex-direction: column
+    background-color: #fff !important
+    overflow-x: hidden
 
 .container
     max-width: 1440px !important
