--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,6 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   background-color: #fff !important;
-  overflow-x: hidden;
 }
 
 .container {
@@ -102,6 +101,10 @@ body {
 .content .slick-next:active {
   -webkit-transform: translate(25px);
           transform: translate(25px);
+}
+
+.overflowHidden {
+  overflow: hidden;
 }
 
 .visible {
@@ -394,6 +397,11 @@ a:hover {
   gap: 50px;
 }
 
+.prompt .prompt__container .prompt__overflowHidden-step {
+  padding: 20px;
+  border-radius: 20px;
+}
+
 .prompt .prompt__container .prompt__text {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -461,8 +469,8 @@ a:hover {
       -ms-flex-pack: justify;
           justify-content: space-between;
   border-radius: 20px;
-  -webkit-box-shadow: 0 10px 50px rgba(86, 133, 255, 0.15);
-          box-shadow: 0 10px 50px rgba(86, 133, 255, 0.15);
+  -webkit-box-shadow: 0 10px 20px rgba(86, 133, 255, 0.15);
+          box-shadow: 0 10px 20px rgba(86, 133, 255, 0.15);
 }
 
 .prompt .prompt__container .prompt__steps .prompt__step h3 {
@@ -693,7 +701,7 @@ a:hover {
         align-self: end;
   }
   .prompt .prompt__steps .prompt__step {
-    width: 405px !important;
+    width: 360px !important;
     height: 150px !important;
     -ms-flex-item-align: center !important;
         -ms-grid-row-align: center !important;
@@ -780,7 +788,7 @@ a:hover {
     display: none !important;
   }
   .prompt {
-    height: 750px;
+    height: 850px;
   }
   .prompt .prompt__text {
     margin: 20px !important;
@@ -792,11 +800,14 @@ a:hover {
         align-self: end;
   }
   .prompt .prompt__steps .prompt__step {
-    width: 305px !important;
-    height: 150px !important;
+    width: 270px !important;
+    height: 190px !important;
     -ms-flex-item-align: center !important;
         -ms-grid-row-align: center !important;
         align-self: center !important;
+  }
+  .prompt .prompt__steps .prompt__step img {
+    margin-left: 5px;
   }
   .prompt .prompt__steps .prompt__step-2 img {
     width: 100px !important;
