--- a/css/style.sass
+++ b/css/style.sass
@@ -18,7 +18,6 @@ body
     display: flex
     flex-direction: column
     background-color: #fff !important
-    overflow-x: hidden
 
 .container
     max-width: 1440px !important
@@ -63,6 +62,9 @@ body
             transform: translate(15px)
         &:active
             transform: translate(25px)
+
+.overflowHidden
+    overflow: hidden
 
 .visible
     top: 150px !important
@@ -226,6 +228,9 @@ a
         align-items: start
         justify-content: space-between
         gap: 50px
+        .prompt__overflowHidden-step
+            padding: 20px
+            border-radius: 20px
         .prompt__text
             display: flex
             flex-direction: column
@@ -255,7 +260,7 @@ a
                 align-items: center
                 justify-content: space-between
                 border-radius: 20px
-                box-shadow: 0 10px 50px rgba(86, 133, 255, 0.15)
+                box-shadow: 0 10px 20px rgba(86, 133, 255, 0.15)
                 h3
                     margin-left: 30px
 
@@ -374,7 +379,6 @@ a
             display: none !important
         .nav__hamb
             display: flex !important
-
     .prompt
         .prompt__container
             flex-direction: column
@@ -383,7 +387,7 @@ a
             width: 400px !important
             align-self: end
             .prompt__step
-                width: 405px !important
+                width: 360px !important
                 height: 150px !important
                 align-self: center !important
         .prompt__text
@@ -442,7 +446,7 @@ a
     .header__blocks
         display: none !important
     .prompt
-        height: 750px
+        height: 850px
         .prompt__text
             margin: 20px !important
         .prompt__steps
@@ -450,9 +454,11 @@ a
             align-self: end
 
             .prompt__step
-                width: 305px !important
-                height: 150px !important
+                width: 270px !important
+                height: 190px !important
                 align-self: center !important
+                img
+                    margin-left: 5px
             .prompt__step-2
                 img
                     width: 100px !important
