--- a/css/style.sass
+++ b/css/style.sass
@@ -52,7 +52,7 @@ body
         display: none !important
     .slick-next
         margin: 10px
-        background: url(../img/arrow.svg) 0 0 no-repeat
+        background: url(../img/Arrow.svg) 0 0 no-repeat
         background-color: rgba(86, 133, 255, 0.05)
         font-size: 0
         border: 0
